--- a/cv.html
+++ b/cv.html
@@ -4,113 +4,5 @@ title: "Curriculum Vitæ"
 permalink: /cv/
 ---
 
-<div class="cv">
-    <div class="cv-block">
-        <p>
-            <img src="{% link assets/frog.jpg %}" alt="Mathis Dubrul" width="100">
-            <img src="{% link assets/contact_info.png %}" alt="né le 30/07/1998 à Grenoble" width="250"/>
-        </p>
-        <h2 id="expérience">Expérience</h2>
-        <h3 id="scalaé-productions---réalisateur---2023-2024">Scalaé Productions – Réalisateur – de août 2023 à fév. 2024</h3>
-        <ul>
-            <li>J'ai réalisé <a href="{% link _posts/2024-02-28-premiere-page.md %}">Le Mystère de la
-                chambre jaune</a> (2min15), un épisode de la collection <strong>Première Page</strong> (France TV)</li>
-            <li>animation 2D TVPaint, colo tradi (pastel) et compositing After Effects</li>
-        </ul>
-    </div>
-    <div class="cv-block">
-        <h2 id="compétences"><br>Compétences</h2>
-        <h3>Je suis disponible pour des missions en :</h3>
-        <ul>
-            <li><strong>Storyboard/Animatique :</strong> TVPaint, Storyboard&nbsp;Pro, Grease Pencil</li>
-            <li><strong>Animation :</strong> TVPaint, Grease Pencil, Flash&nbsp;/&nbsp;Animate</li>
-            <li><strong>Compositing :</strong> After Effects</li>
-            <li><strong>Low-Poly/Shading :</strong> Blender 3D</li>
-            <li><strong>Assistanat réal</strong> sur des projets en anim 2D</li>
-        </ul>
-        <p style="text-align: center;"><a href="{% link demoreel.html %}" class="button">Voir ma bande demo</a></p>
-    </div>
-    <div class="cv-block">
-        <h2 id="formation">Formation</h2>
-        <h3 id="la-poudrière-valence-france--2021--2023">La Poudrière (Valence, France) – 2021 à 2023</h3>
-        <ul>
-            <li>Formation de 2 ans à l'écriture et la réalisation de films d’animation</li>
-            <li>J'y ai réalisé plusieurs courts-métrages dont :<ul>
-                    <li><a href="{% link _posts/2023-09-02-le-petit-commerce.md %}">Le petit commerce</a> (4 min, 2023),
-                        film de fin d&#39;études, animation 2D TVPaint, décor et compositing 3D (rendu stop-motion) dans
-                        Blender.</li>
-                    <li><a href="{% link _posts/2023-01-22-les-poules-ont-des-dents.md %}">Les poules ont des dents</a>,
-                        (1 min, Espoirs de l&#39;Animation, Gulli), animation 2D TVPaint,
-                        compositing After Effects</li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-    <div class="cv-block">
-        <h2>&nbsp;</h2>
-        <h3 id="ensav-la-cambre-bruxelles--2019--2021">ENSAV La Cambre (Bruxelles) – 2019 à 2021</h3>
-        <ul>
-            <li>Master en cinéma d&#39;animation</li>
-            <li>Réalisation de plusieurs projets dont :<ul>
-                    <li><a href="{% link _posts/2021-10-20-nocturne.md %}">Nocturne</a>, film de fin d&#39;études</li>
-                    <li><a href="{% link _posts/2021-01-25-grafson.md %}">Grafson</a>, expérience Web interactive</li>
-                </ul>
-            </li>
-        </ul>
-        <h3 id="haute-école-albert-jacquard-namur--2016---2019">Haute École Albert Jacquard (Namur) – 2016 à 2019</h3>
-        <ul>
-            <li>Bachelor Animation 2D et illustration</li>
-            <li>Réalisation de courts-métrages dont :<ul>
-                    <li><a href="{%link _posts/2019-07-01-immersion.md %}">Immersion</a>, documentaire animé coréalisé
-                        avec Zinia Scorier et Marie Royer</li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-    <div class="cv-block">
-        <h2 id="stages">Stages</h2>
-        <h3 id="panique--bruxelles--assistant-décor--déc-2019">Panique ! (Bruxelles) – Assistant décor – déc. 2019</h3>
-        <ul>
-            <li>stage de 3 semaines</li>
-            <li>fabrication et mise en place d’éléments de décors de stop-motion</li>
-        </ul>
-    </div>
-    <div class="cv-block">
-        <h2>&nbsp;</h2>
-        <h3 id="waooh--liège--animation-2d--nov-2018---janv-2019">Waooh ! (Liège) – Animation 2D – nov. 2018 à janv.
-            2019</h3>
-        <ul>
-            <li>stage de 3 mois</li>
-            <li>animation Flash et TVPaint</li>
-        </ul>
-    </div>
-    <div class="cv-block">
-        <h2 id="divers">Divers</h2>
-        <h3 id="brevet-daptitude-aux-fonctions-danimateur-bafa--2017">Brevet d’Aptitude aux Fonctions d’Animateur (BAFA)
-            – 2017</h3>
-        <ul>
-            <li>Brevet d’aptitude à animer des groupes d’enfants</li>
-            <li>Stage d’approfondissement d’une semaine autour de l’accompagnement culturel en festival de cinéma,
-                dispensé par les CEMÉA dans le cadre du Festival du film de Douarnenez</li>
-        </ul>
-        <h3 id="animateur-en-centre-aéré--étés-2016-à-2018">Animateur en centres aérés – étés 2016 à 2018</h3>
-        <ul>
-            <li>MJC Parmentier et Centre Les Ouistitis (Grenoble), enfants de 3 à 12 ans</li>
-        </ul>
-    </div>
-    <div class="cv-block">
-        <h2 id="divers">&nbsp;</h2>
-        <h3>Compétences annexes</h3>
-        <ul>
-            <li><strong>Code :</strong> Python, Rust, Javascript, HTML/CSS, George</li>
-            <li><strong>Langues :</strong> Français, Portugais (B1), Anglais (B1)</li>
-        </ul>
-        <h3 id="bénévolat-">Bénévolat</h3>
-        <ul>
-            <li>Festival du film d’animation d’Annecy (2018-2019)</li>
-            <li>Festival du Film Court en Plein air de Grenoble (2016-2019)</li>
-            <li>Fédération des étudiant·e·s francophones (2019-2021) : responsable de l’organisation des AGs
-                mensuelles, prise de PV, présidence de séance</li>
-        </ul>
-    </div>
-</div>
+<iframe src="{% link assets/MathisDubrul_CV_2024.pdf %}" frameborder="0" height="1000" loading="lazy"
+title="Curriculum vitae de Mathis Dubrul"></iframe>
